--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "prism"
-version = "0.9.5"
+version = "0.9.4"
 description = "aiç¿»è¯‘"
 authors = ["qyzhg"]
 edition = "2021"
@@ -41,4 +41,5 @@ windows = { version = "0.58", features = [
     "Win32_System_Variant",
     "Win32_Foundation",
     "Win32_UI_WindowsAndMessaging",
+    "Win32_UI_Input_KeyboardAndMouse",
 ] }
