--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "prism"
-version = "0.9.9"
-description = "aiç¿»è¯‘"
+version = "0.9.10"
+description = "全平台AI翻译软件"
 authors = ["qyzhg"]
 edition = "2021"
 
