--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -26,7 +26,7 @@ tauri-plugin-process = "2"
 tauri-plugin-updater = "2"
 tauri-plugin-autostart = "2"
 rusqlite = { version = "0.37", features = ["bundled"] }
-reqwest = { version = "0.12", features = ["json"] }
+reqwest = { version = "0.12", features = ["json", "blocking"] }
 tokio = { version = "1", features = ["full"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
@@ -38,6 +38,13 @@ tauri-plugin-global-shortcut = "2.3"
 arboard = "3.6"
 dirs = "6.0"
 scopeguard = "1.2"
+anyhow = "1.0"
+
+# Speech-to-Text dependencies
+whisper-rs = "0.13"
+cpal = "0.16"
+rubato = "0.16"
+hound = "3.5"
 
 [target.'cfg(windows)'.dependencies]
 windows = { version = "0.62", features = [
