fix(ci): add libasound2-dev dependency for linux build

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,6 +44,7 @@ jobs:
             libwebkit2gtk-4.1-dev \
             libayatana-appindicator3-dev \
             librsvg2-dev \
+            libasound2-dev \
             patchelf
 
       - name: Install Rust toolchain
