--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -63,16 +63,12 @@ jobs:
         uses: tauri-apps/tauri-action@v0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          TAURI_PRIVATE_KEY: ${{ secrets.TAURI_PRIVATE_KEY }}
-          TAURI_SIGNING_PRIVATE_KEY: ${{ secrets.TAURI_PRIVATE_KEY }}
-          TAURI_SIGNING_PRIVATE_KEY_PASSWORD: ${{ secrets.TAURI_KEY_PASSWORD }}
-          TAURI_PUBLIC_KEY: ${{ secrets.TAURI_PUBLIC_KEY }}
         with:
           tauriScript: npm run tauri
           releaseId: ${{ github.event_name == 'release' && github.event.release.id || '' }}
           tagName: ${{ github.event_name == 'release' && github.event.release.tag_name || 'v__VERSION__' }}
-          releaseName: ${{ github.event_name == 'release' && github.event.release.name || 'prism v__VERSION__' }}
+          releaseName: ${{ github.event_name == 'release' && github.event.release.name || 'AI-Translate v__VERSION__' }}
           releaseBody: ${{ github.event_name == 'release' && github.event.release.body || '自动构建的 AI-Translate 桌面版本。' }}
           releaseDraft: false
           prerelease: ${{ github.event_name == 'release' && github.event.release.prerelease || false }}
-          uploadUpdaterJson: true
+
